# settings

./: .gitignore  README.md  env-template  pyproject.toml
app/: main.py
configs/: common.yaml  invalid.yaml  local.yaml  prod.yaml  staging.yaml
settings/: env.py  parse.py  validation.py
tests/: test_settings.py
