[tool.poetry]
name = "settings"
version = "0.1.0"
description = ""
authors = ["Ricardo Leal <ricardo@trustle.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyaml-env = "^1.2.1"
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
