[tool.poetry]
name = "settings"
version = "0.1.0"
description = ""
authors = ["Ricardo Leal <ricardo@trustle.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyaml-env = "^1.2.1"
pytest = "^8.2.0"
pydantic = "^2.7.1"
click = "^8.1.7"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
